2005-07-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Get rid of gensym, not needed in perl >= 5.6.0.

2005-07-26  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix cleanup_sources source filename parsing. Better
	diagnostics during cleanup_sources and cleanup_debs dead time.

2005-07-25  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: only provide default values for LD_PREBIND,
	LD_PREBIND_ALLOW_OVERLAP, and LD_SEG_ADDR_TABLE when the distribution
	is 10.4-transitional and earlier

2005-07-25  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: merge in cleanup_modes branch: orthogonal control
	for deb vs src, --dry-run flag.

2005-07-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: make the default value of LD_PREBIND depend on the 
	distribution (1 for 10.4-transitional and earlier; 0 for 10.4 and 
	later)

2005-07-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: Use super-fast loading if DB hasn't changed. Still much
	cleanup needed.
	* PkgVersion.pm: Make shared_loads global for now.
	* Engine.pm: Adapt to changes in Package

2005-07-20  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: prompt_selection API fix for wrong-checksum

2005-07-19  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Configure.pm: Forward-port the obsolete-mirrors handling.

2005-07-17  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: ...but don't break continuation option.

2005-07-16  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Make failed unpacking of source a fatal error.

2005-07-13  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: Improve POSIX symbol imports.

2005-07-13  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Bootstrap.pm: Support 10.4.2.

2005-07-13  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: flush STDIN before reading each user input.

2005-07-12  Matthew Sachs  <msachs@apple.com>

	* Services.pm: Looser checking of GCC version in enforce_gcc;